# infrapulse

./: .gitignore  Dockerfile  LICENSE  README.md  README.ptbr.md  app.py  go.mod  go.sum  main.py  requirements.txt  setup.cfg
cmd/: main.go
resources/: ptbr.yaml  rich_styles.yaml  styles.tcss
scripts/: ec2_list.go
scripts/s3_buckets/: delete_s3.py  get_s3_buckets_names.py  list_s3.py  list_s3_buckets.py
src/: app.py
src/resources/: ptbr.yaml  styles.tcss
src/scripts/ec2/: get_ec2_instance_summary.py
src/scripts/ec2_instances/: list_running_instances.py
src/scripts/s3_buckets/: delete_s3.py  delete_s3_buckets.py  get_s3_buckets_names.py  list_s3_buckets.py
src/scripts/sts/: get_caller_id.py
src/utils/: aws_clients.py  check_endpoint_conn.py  get_s3_buckets_names.py  reload_page.py  test_endpoint_conn.py  validate_buckets_list.py  validate_s3_buckets.py
src/views/: delete_s3_buckets.py  home.py  s3.py  s3_buckets_list.py
src/views/ec2/: ec2_summary.py  main_ec2.py
src/views/s3/: delete_s3_buckets.py  list_s3_buckets.py
ui/screens/: delete_s3_buckets.py  home.py  s3_buckets_list.py
utils/: RICH_MARKDOWN_MENU.md  cli_output.py  reload_page.py  rich_menu.py  validate_s3_buckets_list.py
views/screens/: delete_s3_buckets.py  s3_buckets_list.py
