[metadata]
name = Infrapulse
version = 0.1.0
description = A collection of Python scripts leveraging Boto3 to manage AWS services.
author = Juan Pablo Lagos
author_email = juanplagos@outlook.com.br
url = https://github.com/juanplagos/infrapulse

[options]
packages = find:
install_requires =
    requests==2.32.3
    requests-file==2.0.0
    requests-ftp==0.3.1
    aiohappyeyeballs==2.4.6
    aiohttp==3.11.12
    aiohttp-jinja2==1.6
    aiosignal==1.3.2
    argcomplete==3.5.3
    attrs==25.1.0
    Beaker==1.12.1
    beautifulsoup4==4.12.3
    blivet==3.11.0
    blivet-gui==2.6.0
    boto3==1.36.16
    botocore==1.36.16
    Brlapi==0.8.5
    cffi==1.17.0
    charset-normalizer==3.3.2
    click==8.1.7
    crypt_r==3.13.1
    cryptography==43.0.0
    cupshelpers==1.0
    dasbus==1.7
    dbus-python==1.3.2
    distro==1.9.0
    dnf==4.22.0
    fedora-third-party==0.10
    file-magic==0.4.0
    fros==1.1
    frozenlist==1.5.0
    humanize==4.9.0
    idna==3.7
    iso639==0.1.4
    Jinja2==3.1.5
    jmespath==1.0.1
    langtable==0.0.68
    libcomps==0.1.21
    libdnf==0.73.4
    libvirt-python==10.6.0
    linkify-it-py==2.0.3
    louis==3.28.0
    lxml==5.2.1
    Mako==1.2.3
    markdown-it-py==3.0.0
    MarkupSafe==2.1.5
    mdit-py-plugins==0.4.2
    mdurl==0.1.2
    mercurial==6.8.2
    msgpack==1.1.0
    multidict==6.1.0
    nftables==0.1
    olefile==0.47
    packaging==24.2
    Paste==3.10.1
    perf==0.1
    pexpect==4.9.0
    pid==2.2.3
    pillow==11.0.0
    platformdirs==4.3.6
    ply==3.11
    productmd==1.43
    propcache==0.2.1
    ptyprocess==0.7.0
    pwquality==1.4.5
    pycairo==1.25.1
    pycparser==2.20
    pycrypto==2.6.1
    pycups==2.0.4
    pyenchant==3.2.2
    Pygments==2.19.1
    PyGObject==3.48.2
    pyinotify==0.9.6
    pykickstart==3.58
    pyOpenSSL==24.2.1
    pyparsing==3.1.2
    pyparted==3.13.0
    PySocks==1.7.1
    python-augeas==1.1.0
    python-dateutil==2.8.2
    python-dotenv==1.0.1
    python-linux-procfs==0.7.3
    python-meh==0.52
    python-pam==2.0.2
    pyudev==0.24.3
    pyxdg==0.27
    PyYAML==6.0.1
    regex==2024.9.11
    requests==2.32.3
    requests-file==2.0.0
    requests-ftp==0.3.1
    rich==13.9.4
    rpm==4.20.0
    s3transfer==0.11.2
    selinux==0.3.0
    sepolicy @ file:///builddir/build/BUILD/policycoreutils-3.7-build/selinux-3.7/python/sepolicy
    setools==4.5.1
    setuptools==69.2.0
    simpleaudio==1.0.4
    simpleline==1.9.0
    six==1.16.0
    sos==4.8.2
    soupsieve==2.6
    systemd-python==235
    Tempita==0.5.2
    textual==1.0.0
    textual-dev==1.7.0
    textual-serve==1.1.1
    typing_extensions==4.12.2
    uc-micro-py==1.0.3
    urllib3==1.26.20
    wheel==0.45.1
    xkbregistry==0.3
    yarl==1.18.3