[metadata]
name = Infrapulse
version = 0.1.0
description = A collection of Python scripts leveraging Boto3 to manage AWS services.
author = Juan Pablo Lagos
author_email = juanplagos@outlook.com.br
url = https://github.com/juanplagos/infrapulse

[options]
packages = find:
install_requires =
    aiohappyeyeballs==2.4.6
    aiohttp==3.11.12
    aiohttp-jinja2==1.6
    aiosignal==1.3.2
    argcomplete==3.6.0
    attrs==25.1.0
    beautifulsoup4==4.13.3
    boto3==1.36.16
    botocore==1.36.16
    cachetools==5.5.2
    cffi==1.17.0
    charset-normalizer==3.3.2
    click==8.1.7
    cryptography==43.0.0
    google-api-core==2.24.2
    google-api-python-client==2.165.0
    google-auth==2.38.0
    google-auth-httplib2==0.2.0
    google-auth-oauthlib==1.2.1
    googleapis-common-protos==1.69.2
    httplib2==0.22.0
    idna==3.7
    Jinja2==3.1.5
    jmespath==1.0.1
    linkify-it-py==2.0.3
    lxml==5.2.1
    markdown-it-py==3.0.0
    MarkupSafe==2.1.5
    mdit-py-plugins==0.4.2
    mdurl==0.1.2
    msgpack==1.1.0
    multidict==6.1.0
    oauthlib==3.2.2
    packaging==24.2
    platformdirs==4.3.6
    protobuf==6.30.1
    proto-plus==1.26.1
    pyasn1==0.6.1
    pyasn1_modules==0.4.1
    pycparser==2.20
    pyOpenSSL==24.2.1
    pyparsing==3.1.2
    PySocks==1.7.1
    python-dateutil==2.8.2
    python-dotenv==1.0.1
    PyYAML==6.0.1
    regex==2024.11.6
    requests==2.32.3
    requests-file==2.0.0
    requests-oauthlib==2.0.0
    rich==13.9.4
    rsa==4.9
    s3transfer==0.11.2
    setuptools==69.2.0
    six==1.16.0
    soupsieve==2.6
    textual==1.0.0
    textual-dev==1.7.0
    textual-serve==1.1.1
    typing_extensions==4.12.2
    uc-micro-py==1.0.3
    uritemplate==4.1.1
    urllib3==1.26.20
    wheel==0.45.1
    yarl==1.18.3